런코딩 정보 추가

--- a/main/templates/common/footer.html
+++ b/main/templates/common/footer.html
@@ -15,29 +15,29 @@
                             <p>김하나</p>
                         </li>
                         <li>
-                            <span>Business License</span>
-                            <p>000-000-00000</p>
+                            <span>사업자등록번호</span>
+                            <p>275-11-01405</p>
                         </li>
                         <li>
-                            <span>Online Biz</span>
-                            <p>000-000-00000</p>
+                            <span>통신파매업 신고</span>
+                            <p>제 2020-수원영통-0409 호</p>
                         </li>
                         <li>
                             <span>Address</span>
-                            <p>경기도 런코딩 런코딩</p>
+                            <p>경기도 수원시 영통구 영통로 200</p>
                         </li>
                     </ul>
                 </div>
                 <div class="contact">
                     <span>CONTACT</span>
                     <ul>
-                        <li>
-                            <span>TEL</span>
-                            <p>070-0000-0000</p>
-                        </li>
+<!--                        <li>-->
+<!--                            <span>TEL</span>-->
+<!--                            <p>070-0000-0000</p>-->
+<!--                        </li>-->
                         <li>
                             <span>E-Mail</span>
-                            <p>master@runcoding.com</p>
+                            <p>runcoding@naver.com</p>
                         </li>
                         <li>
                             <span>Kakao ID</span>
