런코딩 정보 추가

--- a/main/templates/common/footer.html
+++ b/main/templates/common/footer.html
@@ -8,7 +8,7 @@
                     <ul>
                         <li>
                             <span>Company</span>
-                            <p>런코딩</p>
+                            <p>런코딩 </p>
                         </li>
                         <li>
                             <span>CPO</span>
@@ -23,6 +23,10 @@
                             <p>제 2020-수원영통-0409 호</p>
                         </li>
                         <li>
+                            <span>호스팅 사업자</span>
+                            <p>Amazon Web Service(AWS)</p>
+                        </li>
+                         <li>
                             <span>Address</span>
                             <p>경기도 수원시 영통구 영통로 200</p>
                         </li>
