런코딩 정보 추가

--- a/main/templates/common/footer.html
+++ b/main/templates/common/footer.html
@@ -35,10 +35,10 @@
                 <div class="contact">
                     <span>CONTACT</span>
                     <ul>
-<!--                        <li>-->
-<!--                            <span>TEL</span>-->
-<!--                            <p>070-0000-0000</p>-->
-<!--                        </li>-->
+                        <li>
+                            <span>TEL</span>
+                            <p>070-7867-8866</p>
+                        </li>
                         <li>
                             <span>E-Mail</span>
                             <p>runcoding@naver.com</p>
