--- a/main/templates/login/login.html
+++ b/main/templates/login/login.html
@@ -16,7 +16,7 @@
         <div class="btn_area">
             <a href="javascript:void(0);" onClick="javascript:login_submit();" class="btn login">로그인</a>
             <a href="/regi/" class="link join">회원가입</a>
-            <a href="#" class="link find">비밀번호 재설정</a>
+            <a href="#modal01" class="link find">비밀번호 재설정</a>
         </div>
 
 <!--        <div class="snsLogin">-->
@@ -33,12 +33,15 @@
             <a href="#" class="modal-close">×</a>
             <h3>비밀번호 재설정</h3>
             <div class="modal-content">
-                <span>회원님의 이메일로 비밀번호 재설정 링크를 보내드립니다.</span>
+                <span>회원님의 이메일로 <strong>임시 비밀번호</strong>를 보내드립니다.</span>
                 <div class="input_area">
-                    <input type="text" name="inp_login" id="" class="login_inp" placeholder="이메일을 입력해주세요.">
+                    <form id="find_form">
+                    {% csrf_token %}
+                    <input type="text" name="find_loginId" id="find_loginId" class="login_inp" placeholder="이메일을 입력해주세요.">
+                    </form>
                 </div>
                 <div class="btn_area">
-                    <a href="#" class="btn login">메일로 보내기</a>
+                    <a href="javascript:void(0);" onclick="javascript:findPass();" class="btn login">메일로 보내기</a>
                 </div>
             </div>
         </div>
@@ -51,6 +54,7 @@
 <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>
 
 <script>
+
     function login_submit()
     {
         var email_patten = /^[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}$/i;  // 이메일이 적합한지 검사할 정규식
@@ -107,30 +111,50 @@
         }
     }
 
-<!--     function page_move(some_data) {-->
-<!--        var form = document.createElement("form");-->
-<!--        var parm = new Array();-->
-<!--        var input = new Array();-->
+    function findPass()
+	{
+	    var email_patten = /^[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}$/i;  // 이메일이 적합한지 검사할 정규식
+	    var login_id = $('[name=find_loginId]').val();
+	    if(login_id == "")
+	    {
+             alert("이메일 주소를 입력해 주세요.");
+             return false;
+	    }
+	    else if(!email_patten.test(login_id))
+        {
+            alert("이메일 주소 형식을 맞춰주세요. (ex.runcoding@***.com)");
+            return false;
+        }
+	    else
+	    {
+            var find_frm = $('#find_form');
 
-<!--        form.action = url;-->
-<!--        form.method = "post";-->
-
-
-<!--        parm.push( ['some_key1', 'some_value1'] );-->
-<!--        parm.push( ['some_key2', 'some_value2'] );-->
-<!--        parm.push( ['some_data', some_data] );-->
-
-
-<!--        for (var i = 0; i < parm.length; i++) {-->
-<!--            input[i] = document.createElement("input");-->
-<!--            input[i].setAttribute("type", "hidden");-->
-<!--            input[i].setAttribute('name', parm[i][0]);-->
-<!--            input[i].setAttribute("value", parm[i][1]);-->
-<!--            form.appendChild(input[i]);-->
-<!--        }-->
-<!--        document.body.appendChild(form);-->
-<!--        form.submit();-->
-<!--    }-->
+             $.ajax({
+                    data: find_frm.serialize(),
+                    type: 'post',
+                    url: '/find_pass/',
+                    dataType: 'json',
+                    success:function(result)
+                    {
+                        if(result == 200)
+                        {
+                             alert("입력하신 이메일 주소로 전달되었습니다.");
+                             location.href="/run_login/";
+                             return true;
+                        }
+                        else if(result == 204)
+                        {
+                            $("#res_msg").text("가입자가 아닙니다. 회원가입을 해주세요.");
+                        }
+                        else
+                        {
+                            $("#res_msg").text("회원 정보를 다시 확인해주세요.");
+                        }
+                       $('div.modal').modal();
+                    }
+             });
+        }
+	}
 </script>
 
 
