--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -134,7 +134,7 @@
                     }
                     else
                     {
-                        $("#res_msg").text("이미 가입자로 사용할 수 없습니다.");
+                        $("#res_msg").text("등록된 이메일 주소 입니다.");
                         email.value = "";
                         chkId = 0;
 
