--- a/main/templates/mypage/myprofile.html
+++ b/main/templates/mypage/myprofile.html
@@ -76,7 +76,7 @@
         <div data-ml-modal="" id="address1">
             <a href="" class="modal-overlay"></a>
             <div class="modal-dialog modal-dialog-lg mypage">
-                <a href="" class="modal-close">×</a>
+                <a href="#" class="modal-close">×</a>
                 <h3>주소 변경</h3>
                 <div class="modal-content">
                     <span>변경할 주소를 입력해주세요.</span>
@@ -91,7 +91,7 @@
                             <input type="text" name="regi_add03" id="regi_add03" class="login_inp add03 w80" placeholder="상세주소를 입력해 주세요.">
                         </div>
                     <div class="btn_area">
-                        <a href="" class="btn cancle">변경 취소</a>
+                        <a href="#" class="btn cancle">변경 취소</a>
                         <a href="javascript:void(0);" onclick="javascript:changeAddr();" class="btn apply">변경사항 적용</a>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
         <div data-ml-modal="" id="address2">
             <a href="" class="modal-overlay"></a>
             <div class="modal-dialog modal-dialog-lg mypage">
-                <a href="" class="modal-close">×</a>
+                <a href="#" class="modal-close">×</a>
                 <h3>주소 변경</h3>
                 <div class="modal-content">
                     <span>변경할 주소를 입력해주세요.</span>
@@ -117,7 +117,7 @@
                             <input type="text" name="regi_receiver2_add03" id="regi_receiver2_add03" class="login_inp add03 w80" placeholder="상세주소를 입력해 주세요.">
                         </div>
                     <div class="btn_area">
-                        <a href="" class="btn cancle">변경 취소</a>
+                        <a href="#" class="btn cancle">변경 취소</a>
                         <a href="javascript:void(0);" onclick="javascript:changeAddr2();" class="btn apply">변경사항 적용</a>
                     </div>
                 </div>
