--- a/main/templates/login/login.html
+++ b/main/templates/login/login.html
@@ -149,7 +149,7 @@
                         }
                         else
                         {
-                            alert("회원 정보를 다시 확인해주세요.");
+                            alert("아이디 또는 비밀번호를 확인해 주세요.");
                             return false;
                         }
                     }
