수정사항 반영

--- a/main/templates/comunity/coding_comunity.html
+++ b/main/templates/comunity/coding_comunity.html
@@ -4,7 +4,6 @@
 <div class="wrap">
 <section class="sub_visual">
     <div class="section_wrap">
-        <img class="subVisual community" src="{% static 'resource/img/sub/sv_community.png' %}" alt="커뮤니티">
         <div class="slogan community">
                     <span class="bigSlg">
                         런코딩 커뮤니티를 통해<br />
@@ -15,6 +14,7 @@
                 이외의 궁금증은 master@runcoding.co.kr로 문의주세요!
             </p>
         </div>
+        <img class="subVisual review" src="{% static 'resource/img/sub/sv_community.png' %}" alt="커뮤니티">
     </div>
 </section>
 <!-- sub visual -->
@@ -44,7 +44,6 @@
                 인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.
             </p></div>
-<!--            <input type="radio" name="accordion"  id="answer02">  ver2-->
             <input type="checkbox"  id="answer02">
             <label for="answer02">02. 꼭 WIFI 환경이여야 하나요?<em></em></label>
             <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
@@ -64,33 +63,12 @@
                 인공지능이 포함된 키트에서는 꼭 필요합니다.
             </p></div>
         </div>
-<!--   // </table>-->
 
 
 </div>
 
-
-<!-- } 모듈 목록 끝 -->
-
     {% include "common/banner_bottom.html" %}
     {% include "common/footer.html" %}
-
-<!--<script>-->
-<!--    // hamberger menu-->
-<!--    $('.menu-btn').click(function() {-->
-<!--        $('.line').toggleClass('animate');-->
-<!--    });-->
-<!--    // hamberger menu-->
-<!--    // navigation-->
-<!--    $(document).ready(function() {-->
-<!--        $(".gnbClose, .gnbOpen").on("click", function(){-->
-<!--            $(".gnb").toggleClass("active");-->
-<!--            $(".gnbOpen").toggleClass("gnbClose");-->
-<!--            $("html, body, .wrap").toggleClass("open");-->
-<!--            $('html, body, .wrap').off('scroll touchmove mousewheel');-->
-<!--        });-->
-<!--    });-->
-<!--</script>-->
 
 
 </body>
