--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -6,17 +6,16 @@
 
 <!-- content -->
 <div class="wrap">
-     <section class="sub_visual">
-        <div class="section_wrap">
-            <div class="slogan">
-                <span class="bigSlg ck_title">
-                   장바구니
-                </span>
-
-            </div>
-            <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
+<section class="sub_visual">
+    <div class="section_wrap">
+        <div class="slogan">
+                    <span class="bigSlg">
+                        장바구니
+                    </span>
         </div>
-    </section>
+        <img class="subVisual codingLounge" src="{% static 'resource/img/sub/sv_review.png' %}" alt="장바구니">
+    </div>
+</section>
 
     <tr id="orderDiv" > <!--style="display: none" -->
          <div class="container margin-top-40">
@@ -296,8 +295,7 @@
                         </div>
                     </tr>
                 </div>
-                <div class="btn-center">
-<!--                    <a href="#" class="btn order_save">저장하기</a> 논의 후 개발-->
+                <div class="btn-center" style="margin-bottom:40px">
                     <a href="#" class="btn order_complete" onClick="javascript:goPay();">주문하기</a>
                 </div>
              </tr>
