--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -32,23 +32,26 @@
             <li class="list01">
                 <a href="javascript:void(0);" onclick="javscript:goClassDetail({{classList_detail.prd_code}});">
                     <img src={{classList_detail.img}} alt="코딩키트 썸네일">
+                     <input type="hidden" name="idxs[]" value={{forloop.counter0}} >
                     <div class="text_area">
                             <span>
                                 <small class="type">아두이노</small>
                                 {{classList_detail.title}}
                             </span>
                     <div class="ckInfo">
-                                <span class="period">
-                                    <img src="{% static 'resource/img/sub/ico_calendar.png' %}" alt="기간">
-                                    {{classList_detail.period}}개월 과정
+                            <span class="period">
+                                <img src="{% static 'resource/img/sub/ico_calendar.png' %}" alt="기간">
+                                {{classList_detail.period}}개월 과정
+                            </span>
+                            <span class="num">
+                                <img src="{% static 'resource/img/sub/ico_play.png' %}" alt="강의 수">
+                                {{classList_detail.class_count}}개 강의
+                            </span>
+                            <div id="prd_price_{{forloop.counter0}}" >
+                                <span class="price">
+                                    {{classList_detail.price}} 원
                                 </span>
-                        <span class="num">
-                                    <img src="{% static 'resource/img/sub/ico_play.png' %}" alt="강의 수">
-                                    {{classList_detail.class_count}}개 강의
-                                </span>
-                        <span class="price">
-                                    {{classList_detail.price}} won
-                                </span>
+                            </div>
                     </div>
                         <p class="description"> </p>
                     </div>
@@ -76,6 +79,24 @@
 </div>
 
 <script>
+     function numberWithCommas(x)
+     {
+          return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+     }
+
+     $(document).ready(function() {
+            var chks = document.getElementsByName('idxs[]');
+            var check_len = 0;
+            var prd_price_name = ""
+             for (var i=0,m=chks.length;i<m ;i++)
+             {
+                prd_price_name = "prd_price_" + i;
+                price_format = numberWithCommas(document.getElementById(prd_price_name).innerText);
+                document.getElementById(prd_price_name).innerText = price_format;
+             }
+
+      });
+
     $(window).scroll(function() {
         var scroll_top = $(window).scrollTop();
         if (scroll_top >= $(".sub_visual").outerHeight()) {
