--- a/main/templates/lounge/coding_lounge_view.html
+++ b/main/templates/lounge/coding_lounge_view.html
@@ -39,7 +39,7 @@
                     <!-- 동영상 영역입니다. -->
                     <div class="video_area">
                         <iframe id="youTubePlayer1" type="text/html" width="1000" height="500"
-                        src="http://www.youtube.com/embed/pUU90JhO75M?autoplay=1" frameborder="0"></iframe>
+                        src="http://www.youtube.com/embed/{{lounge_video}}?autoplay=1" frameborder="0"></iframe>
                     </div>
 
 <!--                    <div class="precaution">-->
