--- a/main/templates/myclass/myclass.html
+++ b/main/templates/myclass/myclass.html
@@ -134,7 +134,7 @@
 
         function getVideo(prdCode, data)
         {
-            var src = '/static/resource/data/' + prdCode + '/' + data;
+            var src = '/static/resource/data/lecture/' + prdCode + '/' + data;
             var video  = document.getElementById('video_ctrl');
             video.src = src;
         }
