--- a/main/templates/comunity/coding_comunity.html
+++ b/main/templates/comunity/coding_comunity.html
@@ -21,50 +21,26 @@
 
 <!-- community table -->
 <div class="community_area">
-<!--    <table>-->
-<!--        <colgroup>-->
-<!--            <col style="width:8%">-->
-<!--            <col style="width:80%">-->
-<!--            <col style="width:12%">-->
-<!--        </colgroup>-->
-<!--        <thead>-->
-<!--        <tr>-->
-<!--            <th>번호</th>-->
-<!--            <th>제목</th>-->
-<!--            <th>글쓴이</th>-->
-<!--        </tr>-->
-<!--        </thead>-->
-<!--        <tbody>-->
-<!--                <tr><td colspan="5" class="empty_table">게시물이 없습니다.</td></tr>        </tbody>-->
         <h5>궁금해요~~</h5>
         <div class="accordion">
-            <input type="checkbox"  id="answer01">
-            <label for="answer01">01. 꼭 WIFI 환경이여야 하나요?<em></em></label>
-            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.
-            </p></div>
-            <input type="checkbox"  id="answer02">
-            <label for="answer02">02. 꼭 WIFI 환경이여야 하나요?<em></em></label>
-            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.
-            </p></div>
-            <input type="checkbox"  id="answer03">
-            <label for="answer03">03. 꼭 WIFI 환경이여야 하나요?<em></em></label>
-            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.
-            </p></div>
-            <input type="checkbox"  id="answer04">
-            <label for="answer04">04. 꼭 WIFI 환경이여야 하나요?<em></em></label>
-            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
-                인공지능이 포함된 키트에서는 꼭 필요합니다.
-            </p></div>
+             {% for comunityList in comunity_list %}
+                <input type="checkbox" id="{{comunityList.label_name}}">
+                <label for="{{comunityList.label_name}}">{{forloop.counter}}. {{comunityList.title}}<em></em></label>
+                <div>
+                    <p>
+                        {{comunityList.description}}
+
+                        {% if comunityList.sub_description1 != "" %}
+                        <br/>{{comunityList.sub_description1}}
+                        {% endif%}
+
+                        {% if comunityList.sub_description2 != "" %}
+                        <br/>{{comunityList.sub_description2}}
+                        {% endif%}
+                    </p>
+                </div>
+            {% endfor %}
         </div>
-
-
 </div>
 
     {% include "common/banner_bottom.html" %}
