a 링크 범위 조정

--- a/main/templates/login/login.html
+++ b/main/templates/login/login.html
@@ -97,7 +97,7 @@
                         }
                         else if(result == 202)
                         {
-                            $("#res_msg").text("회원 정보를 다시 확인해주세요.");
+                            $("#res_msg").text("아이디 또는 비밀번호를 확인해 주세요.");
                         }
                         else if(result == 204)
                         {
