--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -84,23 +84,33 @@
                 <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
                 <ul class="sub_menu">
                      <div id="logout" >
-                          <li>
-                            <a href="/myprofile/">내 프로필</a>
-                        </li>
-                        <li>
-                            <a href="/myorder/">주문내역</a>
-                        </li>
-                        <li>
-                            <a href="/order/">장바구니</a>
-                        </li>
-                        <li>
-                            <a href="/run_logout/">로그아웃</a>
-                        </li>
+                          <a href="/myprofile/">
+                              <li style="border-bottom:1px solid #dcdcdc;">
+                               내 프로필
+                            </li>
+                          </a>
+                        <a href="/myorder/">
+                            <li style="border-bottom:1px solid #dcdcdc;">
+                                주문내역
+                            </li>
+                        </a>
+                        <a href="/order/">
+                            <li style="border-bottom:1px solid #dcdcdc;">
+                                장바구니
+                            </li>
+                         </a>
+                        <a href="/run_logout/">
+                            <li>
+                                로그아웃
+                            </li>
+                        </a>
                      </div>
                      <div id="login">
-                         <li>
-                            <a href="/run_login/">로그인</a>
-                         </li>
+                         <a href="/run_login/">
+                             <li>
+                                로그인
+                             </li>
+                         </a>
                      </div>
                 </ul>
             </div>
