검색 범위 넒힘

--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -35,7 +35,7 @@
                      <input type="hidden" name="idxs[]" value={{forloop.counter0}} >
                     <div class="text_area">
                             <span>
-                                <small class="type">아두이노</small>
+                                <small class="type">{{classList_detail.keyword}}</small>
                                 {{classList_detail.title}}
                             </span>
                     <div class="ckInfo">
